# scorpion

./: CMakeLists.txt  MainProgram.cpp  MainProgram.hpp  Parser.cpp  Parser.hpp  RuntimeSyntaxAnalizer.cpp  main.cpp  test.hpp
Channel/: CMakeLists.txt
Channel/include/: Channel_base.hpp
Channel/src/: Channel_base.cpp
Channel_flag/: CMakeLists.txt
Channel_flag/include/: Channel_flag_base.hpp
Channel_flag/src/: Channel_flag_base.cpp
Command/: CMakeLists.txt
Command/include/: Command_base.hpp  Command_base_interfaces.hpp  Main_command.hpp
Command/src/: Command_base.cpp  Main_command.cpp
Common_interfaces/: CMakeLists.txt
Common_interfaces/include/: Common_interfaces.hpp
Common_interfaces/src/: Common_interfaces.cpp
Converter/: CMakeLists.txt
Converter/include/: Converter.hpp
Converter/src/: Converter.cpp
Error/: CMakeLists.txt
Error/Syntax_error/: CMakeLists.txt
Error/Syntax_error/include/: Syntax_error_base.hpp  Syntax_error_base_interfaces.hpp
Error/Syntax_error/src/: Syntax_error_base.cpp
Error/include/: Command_exception_base.hpp  Error_base.hpp
Error/src/: Command_exception_base.cpp  Error_base.cpp
Error_propagator/: CMakeLists.txt
Error_propagator/include/: Error_propagator_base.hpp  Error_propagator_base_interfaces.hpp  Main_error_propagator.hpp
Error_propagator/src/: Main_error_propagator.cpp
Executer/: CMakeLists.txt
Executer/include/: Executer.hpp
Executer/src/: Executer.cpp
Manager/: CMakeLists.txt
Manager/include/: Main_manager.hpp  Manager_base.hpp  Manager_base_interfaces.hpp
Manager/src/: Main_manager.cpp  Manager_base.cpp  Manager_base_interfaces.cpp
Parser/: CMakeLists.txt
Parser/include/: Main_parser.hpp  Parser_base.hpp  Parser_base_interfaces.hpp
Parser/src/: Main_parser.cpp  Parser_base.cpp
Program/: CMakeLists.txt
Program/include/: Program_base.hpp
Program/src/: Program_base.cpp
Receiver/: CMakeLists.txt
Receiver/include/: Command_receiver_base.hpp  Command_receiver_base_interfaces.hpp  Main_receiver.hpp
Receiver/src/: Command_receiver_base.cpp  Main_receiver.cpp
Runtime_tools/: CMakeLists.txt
Runtime_tools/include/: RuntimeSyntaxAnalizer.hpp
Runtime_tools/src/: RuntimeSyntaxAnalizer.cpp
Syntax_checker/: CMakeLists.txt
Syntax_checker/Ambigious_checker/: CMakeLists.txt
Syntax_checker/Correct_checker_engine/: CMakeLists.txt
Syntax_checker/Correct_checker_engine/include/: Correct_checker_engine_base.hpp  Correct_checker_engine_base_interfaces.hpp  Main_correct_checker_engine.hpp
Syntax_checker/Correct_checker_engine/src/: Correct_checker_engine_base.cpp
Syntax_checker/Syntax_predicates/: CMakeLists.txt
Syntax_checker/Syntax_predicates/include/: Syntax_predicates.hpp
Syntax_checker/include/: Main_syntax_checker.hpp  Syntax_checker_base.hpp  Syntax_checker_base_interfaces.hpp
Syntax_checker/src/: Main_syntax_checker.cpp  Syntax_checker_base.cpp
